--- a/fronted/app/src/main/res/layout/resource_item_orders.xml
+++ b/fronted/app/src/main/res/layout/resource_item_orders.xml
@@ -98,6 +98,8 @@
                 android:inputType="number"
                 android:maxLines="1"
                 android:text="1"
+                android:editable="false"
+                android:focusable="false"
                 android:textAlignment="center"
                 android:textSize="29sp"
                 tools:ignore="TouchTargetSizeCheck" />
