modulos de customers, ordenes actualizados y funcionales

--- a/fronted/app/src/main/res/layout/activity_login.xml
+++ b/fronted/app/src/main/res/layout/activity_login.xml
@@ -63,8 +63,9 @@
             android:singleLine="true"
             android:layout_height="57dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/button_shape"
-            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/baseline_email_24"
+            android:drawablePadding="8dp"
+            android:background="@drawable/round_edittext_bg"
             android:fontFamily="@font/poppinsregular"
             android:hint="Ingrese su Correo"
             android:paddingLeft="15dp"
@@ -80,8 +81,9 @@
             android:singleLine="true"
             android:layout_height="57dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/button_shape"
-            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/baseline_password_24"
+            android:drawablePadding="8dp"
+            android:background="@drawable/round_edittext_bg"
             android:fontFamily="@font/poppinsregular"
             android:hint="Confirme Contraseña"
             android:paddingLeft="15dp"
