--- a/fronted/app/src/main/res/layout/activity_register.xml
+++ b/fronted/app/src/main/res/layout/activity_register.xml
@@ -57,22 +57,40 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_below="@+id/r_text2"
-        android:padding="30dp"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="20dp"
         >
-
+        <EditText
+            android:id="@+id/edt_identidad"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:drawableLeft="@drawable/baseline_person_24"
+            android:drawablePadding="8dp"
+            android:background="@drawable/round_edittext_bg"
+            android:fontFamily="@font/poppinsregular"
+            android:hint="Ingrese su identidad"
+            android:paddingLeft="15dp"
+            android:textColor="@color/black"
+            android:textSize="14dp"
+            android:maxLength="13"
+            tools:ignore="TextSizeCheck" />
         <EditText
             android:id="@+id/edt_fullname"
             android:maxLines="1"
             android:singleLine="true"
             android:layout_width="match_parent"
             android:layout_height="57dp"
-            android:background="@drawable/button_shape"
-            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/baseline_person_24"
+            android:drawablePadding="8dp"
+            android:background="@drawable/round_edittext_bg"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Ingrese su nombre completo"
+            android:hint="Ingrese su nombre de usuario"
             android:paddingLeft="15dp"
             android:textColor="@color/black"
             android:textSize="14dp"
+            android:layout_marginTop="15dp"
             tools:ignore="TextSizeCheck" />
 
         <EditText
@@ -82,8 +100,9 @@
             android:layout_width="match_parent"
             android:layout_height="57dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/button_shape"
-            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/baseline_email_24"
+            android:drawablePadding="8dp"
+            android:background="@drawable/round_edittext_bg"
             android:fontFamily="@font/poppinsregular"
             android:hint="Ingrese su correo"
             android:paddingLeft="15dp"
@@ -98,8 +117,9 @@
             android:layout_width="match_parent"
             android:layout_height="57dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/button_shape"
-            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/baseline_password_24"
+            android:drawablePadding="8dp"
+            android:background="@drawable/round_edittext_bg"
             android:fontFamily="@font/poppinsregular"
             android:hint="Crear Contraseña"
             android:paddingLeft="15dp"
@@ -115,8 +135,9 @@
             android:layout_width="match_parent"
             android:layout_height="57dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/button_shape"
-            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/baseline_password_24"
+            android:drawablePadding="8dp"
+            android:background="@drawable/round_edittext_bg"
             android:fontFamily="@font/poppinsregular"
             android:hint="Confirmar Contraseña"
             android:paddingLeft="15dp"
@@ -132,12 +153,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/form"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
         android:width="300dp"
         android:background="@drawable/button_shape"
         android:fontFamily="@font/poppinssemibold"
         android:text="Register"
-        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="15sp" />
 
@@ -146,7 +165,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="30dp"
+        android:paddingTop="20dp"
         android:layout_below="@+id/btn_register"
         android:layout_centerHorizontal="true"
         android:gravity="center"
