--- a/fronted/app/src/main/res/layout/fragment_profile.xml
+++ b/fronted/app/src/main/res/layout/fragment_profile.xml
@@ -54,8 +54,9 @@
             android:singleLine="true"
             android:layout_width="match_parent"
             android:layout_height="57dp"
-            android:background="@drawable/button_shape"
-            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/baseline_person_24"
+            android:drawablePadding="8dp"
+            android:background="@drawable/round_edittext_bg"
             android:fontFamily="@font/poppinsregular"
             android:hint="Ingrese su nombre completo"
             android:paddingLeft="15dp"
@@ -70,13 +71,14 @@
             android:layout_width="match_parent"
             android:layout_height="57dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/button_shape"
-            android:backgroundTint="@color/white"
             android:fontFamily="@font/poppinsregular"
             android:hint="Ingrese su correo"
             android:paddingLeft="15dp"
             android:textColor="@color/black"
             android:textSize="14dp"
+            android:drawableLeft="@drawable/baseline_email_24"
+            android:drawablePadding="8dp"
+            android:background="@drawable/round_edittext_bg"
             tools:ignore="TextSizeCheck" />
 
         <EditText
@@ -86,8 +88,9 @@
             android:layout_width="match_parent"
             android:layout_height="57dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/button_shape"
-            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/baseline_password_24"
+            android:drawablePadding="8dp"
+            android:background="@drawable/round_edittext_bg"
             android:fontFamily="@font/poppinsregular"
             android:hint="Crear Contraseña"
             android:paddingLeft="15dp"
